# fput

./: .gitmodules  README.md  Tupfile.lua  compile_flags.txt  meson.build
src/: fput.c  fput.h
test/: fput.c  fputi_test.c  meson.build  printf.c
test/src/: fprintf.c  fput.c  main.c  print.h
